...
    <string name="btn_link_to_register">Não é um membro? Registre-se agora no RedCup!</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="inputEmail">Insira o seu email!</string>
    <string name="inputPassword">Insira a sua senha!</string>
    <string name="minimum_password">Senha muito curta, minímo 6 caráteres!</string>
    <string name="maximum_password">Senha muito longa, máximo 16 caráteres!</string>
    <string name="auth_failed">Falha na autenticação, cheque o email e a senha ou cadastre-se.</string>

    <!--Signup-->

    <string name="action_sign_in_short">Cadastre-se</string>
    <string name="btn_link_to_login">Já Cadastrado. Faça o Login!</string>
    <string name="auth_failed_signup">Usuário logado com sucesso!</string>
...
